--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ div {
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
 <p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekatere so tudi opuščene. Nekaj obiskanih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in na izletu okrog Snežnika, gor in dol preko prelaza Vršič, po Krasu, dolini Glinščice, po poteh ozkotirne železnice v Idrijo ali po Juliani, karta ter osnove orientacije pridejo kar prav. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju so v najboljšem primeru 1:25.000 in zavita pot hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Lep primer je bivakiranje skupine Tržačanov okrog 2015 v bližini koče na Snežniku, ker jih je ujelo slabo vreme in niso vedeli kje je gor in kje dol, kaj šele kje je koča. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon. Analizo terena naj spremlja človek, ne računalnik.</p>
 
-<h3>PZS in podatki</h3>
+<h3>PZS in ostali viriv podatkov</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
 <p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo prostovoljci, ki sledijo smernicam vrisa in urejenosti podatkov. Predvsem je pomembna ena stvar - več prostovoljcev, ki bo (kvalitetno) urejalo OSM zbirko <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj.</p> 
 
@@ -59,7 +59,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite plačljivo verzijo, ker meni se je prvih nekaj mesecev do nakupa trgalo zaradi reklam :) </b></p>
 
 <h3>Avenza</h3>
-<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a nista na razpolago v Locus trgovini! Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Lahko imate sicer topografsko karto GURS zgolj merila 1:50.000, a brez tematskih oznak.</p>
+<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a nista na razpolago v Locus trgovini! Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
 
 <h3>Apple IOS?</h3>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
@@ -130,7 +130,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <img src="slike\mapsme.jpg" height="600">
 
 <h3>Mapy.cz</h3>
-<p>Še en derivat OpenStreetMap. Hiter in enostaven, kategorizacija določenih poti ter nabor izletov in točk. </p>
+<p>Še en derivat OpenStreetMap. Hiter in enostaven, kategorizacija določenih poti ter nabor izletov in točk. Nima možnosti dodajanja kart.</p>
 <img src="slike\mapy.jpg" height="600">
 
 <h3>Tabacco</h3>
