--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ div {
 
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. <br>
 <br>
+
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
 <p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekatere so tudi opuščene. Nekaj obiskanih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in na izletu okrog Snežnika, gor in dol preko prelaza Vršič, po Krasu, dolini Glinščice, po poteh ozkotirne železnice v Idrijo ali po Juliani, karta ter osnove orientacije pridejo kar prav. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju so v najboljšem primeru 1:25.000 in zavita pot hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Lep primer je bivakiranje skupine Tržačanov okrog 2015 v bližini koče na Snežniku, ker jih je ujelo slabo vreme in niso vedeli kje je gor in kje dol, kaj šele kje je koča. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon. Analizo terena naj spremlja človek, ne računalnik.</p>
 
@@ -41,7 +42,6 @@ div {
 
 <p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. </p>
 <p>Velika večina aplikacij je zmes vsega in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve na terenu ter potešijo radovednost glede imena vrhov in oddaljenosti do naslednje točke. Velik minus imajo vse funkcije, ki zahtevajo omogočen prenos podatkov. Pri tem je potrebno omeniti, da nikoli ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
-
 
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
@@ -143,6 +143,8 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
 
 <p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Praktično vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
+
+<p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... </p>
 
 <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
 
