--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Orux podpira ročni uvoz, priporočljiv je format mbtiles v katerem so lahko spravljene tako vektorske kot rastrske (papirnate) karte - npr. GURS zemljevidov v merilu 1:50.000. 
 <h2>GURS 1:50.000</h2>
 <img src="slike\gurs.jpg" height="600">
-<p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije. Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://1drv.ms/u/s!Ala2nKI4Mn6Tgsw1uzKHJTxfIa1YvA?e=x3RLts">mojem oblaku</a>.</p>
+<p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije. Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://onedrive.live.com/download?cid=937E3238A29CB656&resid=937E3238A29CB656%2142549&authkey=AIxmrZ7xWTxx2ms">mojem oblaku</a>.</p>
+
+
+
+
+
 <p>Datoteko (3.3gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Veselo uporabo.</p>
 
 <h2>Skenirane karte</h2>
