--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ div {
 <br>
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. <br>
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. <br>
 <br>
 
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
@@ -38,10 +38,10 @@ div {
 
 <h3>PZS in ostali viri podatkov</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
-<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo prostovoljci, ki sledijo smernicam vrisa in urejenosti podatkov. Predvsem je pomembna ena stvar - več prostovoljcev, ki bo (kvalitetno) urejalo OSM zbirko <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj.</p> 
+<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo prostovoljci, ki sledijo smernicam vrisa in urejenosti podatkov. Predvsem je pomembna ena stvar - več prostovoljcev, ki bo (kvalitetno) urejalo OSM zbirko <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj. Prednost vektorskih zbirk pred klasični kartografskimi rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. </p> 
 
 <p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. </p>
-<p>Velika večina aplikacij je zmes vsega in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve na terenu ter potešijo radovednost glede imena vrhov in oddaljenosti do naslednje točke. Velik minus imajo vse funkcije, ki zahtevajo omogočen prenos podatkov. Pri tem je potrebno omeniti, da nikoli ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
+<p>Velika večina aplikacij je zmes vsega in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve na terenu ter potešijo radovednost glede imena vrhov in oddaljenosti do naslednje točke. Velik minus imajo vse funkcije, ki zahtevajo omogočen prenos podatkov. Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
 
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
@@ -60,7 +60,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <img src="slike\locus.jpg" height="600">
 <p>Trgovina Locus in PZS produkti.</p>
 <br>
-<h3>Avenza</h3>
+<h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
 <p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a nista na razpolago v Locus trgovini! Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
 
 <h3>Apple IOS?</h3>
@@ -80,7 +80,7 @@ Ročna namestitev datotek potrebuje ustrezno dovoljenje. Za Android verzije od 8
 Korak 3: Ga ni. Orux je nameščen.</p>
 
 <h2>Namestitev kartografske podlage</h2>
-<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Slabost - če enkrat nehajo z delom </p>
+<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Alternativa? Plačljivi ponudniki.</p>
 
 <p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. Iz seznama izberite Install in Orux/Locus.  </p>
 <img src="slike\andro.jpg" height="600">
