--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ div {
 <br>
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. <br>
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
 
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
@@ -149,7 +149,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
 <p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
 
-<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Praktično vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
 
 <p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... </p>
 <img src="slike\outdoor.jpg" height="600">
