--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <br>
 
 <h3>Locus</h3>
-<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite plačljivo verzijo, ker meni se je prvih nekaj mesecev do nakupa trgalo zaradi reklam :) </b></p><br>
+<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite plačljivo verzijo, ker meni se je prvih nekaj mesecev do nakupa trgalo zaradi reklam :).</b> Za približno 20€ enkratnega nakupa ste opremljeni z aplikacijo in kar nekaj PZS kartami.</p><br>
 <img src="slike\locus.jpg" height="600">
 <p>Trgovina Locus in PZS produkti.</p>
 <br>
