--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Po namestitvi je potrebno ročno osvežiti zbirko kart. To naredite s klikom na 
 Nova različica kart (z novimi podatki in spremembami vsebine) je na voljo na začetku vsakega meseca ter jih je potrebno namestiti ročno (po istem postopku). Na voljo so za ves svet. Vir podatkov je projekt <a href="https://www.openstreetmap.org/">OpenstreetMap</a>.
 </p>
 
-<h3>Namestitev OpenAndroMaps vizualizacije</h3>
+<h3>Namestitev OpenAndroMaps vizualizacije (zgolj prvič)</h3>
 <p> Postopek je enak za Locus in Orux.</p>
 <p>Privzeto je prenešena karta prikazana brez plastnic in kategorizacije poti. Zgolj prvič je potrebno namestiti vizualizacijo z imenom Elevate 4, ki se nahaja na <a href="https://www.openandromaps.org/en/legend/elevate-mountain-hike-theme">povezavi</a>.
 Kliknite gumb "ORUX/LOCUS" za namestitev. 
