--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <img src="slike\outdoor.jpg" height="600">
 <p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
 <br>
-<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
+<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b> V teh časih pozabljeni ampak tiskani planinski vodniki z naborom tur so odlična stvar (in čudovito darilo).</p>
 
 <h1>Imena vrhov?</h1>
 <p>Od prvega dneva uporabnik (plačljive) Peak finder aplikacije. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
