--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <p>Trgovina Locus in PZS produkti.</p>
 <br>
 <h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
-<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a nista na razpolago v Locus trgovini! Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
+<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost nista na razpolago v Locus trgovini. Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
 
 <h3>Apple IOS?</h3>
-<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
+<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. Avenza je. </p>
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
@@ -80,7 +80,7 @@ Ročna namestitev datotek potrebuje ustrezno dovoljenje. Za Android verzije od 8
 Korak 3: Ga ni. Orux je nameščen.</p>
 
 <h2>Namestitev kartografske podlage</h2>
-<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Alternativa? Plačljivi ponudniki.</p>
+<p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux. OpenAndroMaps ni edini ponudnik - obstaja tudi OpenMaps.eu, ki ima zopet svojo simbologijo ampak z vidika posodobitve kart ste na slabšem. Slabost obeh? Odvisni ste od dobre volje prostovljcev. Alternativa? Plačljivi ponudniki. Zahtevnost postopka? 1 klik v brskalniku in 1 klik v aplikaciji.</p>
 
 <p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. Iz seznama izberite Install in Orux/Locus.  </p>
 <img src="slike\andro.jpg" height="600">
@@ -112,13 +112,13 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Orux podpira ročni uvoz, priporočljiv je format mbtiles v katerem so lahko spravljene tako vektorske kot rastrske (papirnate) karte - npr. GURS zemljevidov v merilu 1:50.000. 
 <h2>GURS 1:50.000</h2>
 <img src="slike\gurs.jpg" height="600">
-<p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije. Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://onedrive.live.com/download?cid=937E3238A29CB656&resid=937E3238A29CB656%2142549&authkey=AIxmrZ7xWTxx2ms">mojem oblaku</a>.</p>
+<p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije (na voljo tudi v Avenzi). Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://onedrive.live.com/download?cid=937E3238A29CB656&resid=937E3238A29CB656%2142549&authkey=AIxmrZ7xWTxx2ms">mojem oblaku</a>.</p>
 
 
 
 
 
-<p>Datoteko (3.3gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Veselo uporabo.</p>
+<p>Datoteko (3.5gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Veselo uporabo.</p>
 
 <h2>Skenirane karte</h2>
 <p>Mogoč je tudi uvoz skeniranih papirnatih kart (če so umeščene v prostor/opremljene s koordinatami). S tem lahko v digitalno življenje spravite vse vaše kupljene papirnate karte. Kako? Z nekaj mukotrpnega dela s skenerjem in v programu QGIS. Primer: </p>
@@ -142,12 +142,12 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 <h3>Tabacco</h3>
 
-<p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
+<p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo zgolj njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
 <img src="slike\tabacco.jpg" height="600">
 
 
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
-<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
 
 <p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
 
@@ -158,7 +158,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b> V teh časih pozabljeni ampak tiskani planinski vodniki z naborom tur so odlična stvar (in čudovito darilo).</p>
 
 <h1>Imena vrhov?</h1>
-<p>Od prvega dneva uporabnik (plačljive) Peak finder aplikacije. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
+<p>Meni najljubša je (plačljiva) Peak finder aplikacija. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
 
 
 <br>
