--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
 
 
 h1 {
-  
   font-family: verdana;
-  
+}
+h2 {
+  font-family: verdana;
+}
+h3 {
+  font-family: verdana;
+}
+h4 {
+  font-family: verdana;
 }
 div {
-	padding: 15px;
+	padding: 20px;
 }
+
+p {
+  font-size: 18px;
+}
+ul {
+  font-size: 18px;
+}
+
 .center {
   display: block;
   margin-left: auto;
