--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 <h1>Imena vrhov?</h1>
 <p>Meni najljubša je (plačljiva) Peak finder aplikacija. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
+<img src="slike\peakfinder.jpg" height="600">
 
 
 <br>
