--- a/index.html
+++ b/index.html
@@ -6,27 +6,50 @@
 
 h1 {
   font-family: verdana;
+  color: #dedede;
 }
 h2 {
   font-family: verdana;
+  color: #dedede;
 }
 h3 {
   font-family: verdana;
+  color: #dedede;
 }
 h4 {
   font-family: verdana;
+  color: #dedede;
 }
 div {
 	padding: 20px;
+  color: #dedede;
 }
 
 p {
   font-size: 18px;
+  color: #dedede;
 }
 ul {
   font-size: 18px;
+  color: #dedede;
+}
+a:link {
+  color: #dedede;
+  background-color: transparent;
+  text-decoration: none;
 }
 
+a:visited {
+  color: #29c294;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #29c294;
+  background-color: transparent;
+  text-decoration: underline;
+}
 .center {
   display: block;
   margin-left: auto;
@@ -35,7 +58,7 @@ ul {
 }
 </style>
 </head>
-<body>
+<body style="background-color:#323e42;">
 
 
 <br>
@@ -103,9 +126,11 @@ Korak 3: Ga ni. Orux je nameščen.</p>
 <br>Gumb sproži prenos karte v aplikacijo ter lahko traja do nekaj minut (OpenAndroMaps je projekt skupine prostovoljcev, ki sami krijejo stroške strežnikov zato jim ne moremo zameriti hitrosti prenosa). 
 <br>
 Po namestitvi je potrebno ročno osvežiti zbirko kart. To naredite s klikom na ikono Zemljevid (zgoraj desno) -> "Zamenjaj karto/Switch map". V novem oknu kliknite napis "Offline" in ikono za osvežitev (puščice v krogu). Med kartami se more pojaviti napis Slovenia (mapsforge).
+</p>
 <img src="slike\uvoz.jpg" height="600">
+
 <br>
-<br>
+<p>
 Nova različica kart (z novimi podatki in spremembami vsebine) je na voljo na začetku vsakega meseca ter jih je potrebno namestiti ročno (po istem postopku). Na voljo so za ves svet. Vir podatkov je projekt <a href="https://www.openstreetmap.org/">OpenstreetMap</a>.
 </p>
 
