--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ a:hover {
 
 
 <br>
-<p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
+<h3 style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></h3>
 
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
